c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_decl_bad_type_specifier.c
// Can't combine union specifier with other type specifier

union a { int a; };

int main(void) {
    union a int x;
    return 0;
}